# ceilingDetection

./: CMakeLists.txt  README.md  package.xml
src/: ceiling_detector.cpp
